--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
     "@mui/styles": "^5.4.2",
@@ -87,6 +86,7 @@
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "sockjs-client": "^1.5.1",
+    "source-map-explorer": "^2.5.3",
     "style-loader": "0.23.1",
     "style-to-object": "^0.3.0",
     "terser-webpack-plugin": "2.3.4",
@@ -102,7 +102,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node --max-old-space-size=4096 scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app"
