--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@babel/core": "7.8.4",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@material-ui/core": "^4.8.3",
+    "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
     "@mui/styles": "^5.4.2",
