--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@material-ui/lab": "4.0.0-alpha.57",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
     "@mui/styles": "^5.4.2",
