BRIL-127 Upgrade Monaco editor version.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "autoprefixer": "10.4.5",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -54,8 +55,8 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
-    "monaco-editor": "0.28.1",
-    "monaco-editor-webpack-plugin": "4.2.0",
+    "monaco-editor": "0.34.0",
+    "monaco-editor-webpack-plugin": "7.1.0",
     "mui-datatables": "^4.3.0",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -68,7 +69,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
-    "react-monaco-editor": "0.46.0",
+    "react-monaco-editor": "0.50.1",
     "react-refresh": "^0.11.0",
     "react-resize-detector": "^9.1.0",
     "resolve": "^1.20.0",
