--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "markdown-to-jsx": "^7.2.1",
     "mini-css-extract-plugin": "^2.4.5",
     "monaco-editor": "0.34.0",
     "monaco-editor-webpack-plugin": "7.1.0",
