--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.7",
     "@mui/styles": "^5.13.7",
+    "@mui/system": "^5.4.1",
+    "@mui/x-data-grid": "^6.11.0",
     "@mui/x-date-pickers": "^6.10.2",
     "@noble/secp256k1": "1.7.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
