--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "js-base64": "^3.7.5",
     "markdown-to-jsx": "^7.2.1",
     "mini-css-extract-plugin": "^2.4.5",
     "monaco-editor": "0.28.1",
