--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-alpha.87",
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.7",
@@ -45,7 +46,7 @@
     "dompurify": "^3.0.4",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "draft-js": "^0.11.7",
+    "draft-js": "^0.10.1",
     "draft-js-export-html": "^1.4.1",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
@@ -55,6 +56,7 @@
     "history": "4.10.1",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
+    "immutable": "3.8.2",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
@@ -76,6 +78,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-monaco-editor": "0.46.0",
+    "react-quill": "^2.0.0",
     "react-refresh": "^0.11.0",
     "react-resize-detector": "^9.1.0",
     "resolve": "^1.20.0",
