--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/classnames": "^2.3.1",
     "@types/dompurify": "^3.0.2",
-    "@types/draft-js": "^0.11.12",
+    "@types/draft-js": "0.11.7",
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/history": "^4.7.6",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/jest": "^27.5.2",
     "@types/mui-datatables": "^4.3.5",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "autoprefixer": "10.4.5",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -46,14 +49,16 @@
     "dompurify": "^3.0.4",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "draft-js": "^0.10.1",
+    "draft-js": "0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "history": "4.10.1",
+    "html-to-draftjs": "^1.5.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "immutable": "3.8.2",
@@ -76,6 +81,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-draggable": "^4.4.5",
     "react-monaco-editor": "0.46.0",
     "react-quill": "^2.0.0",
